# cmake_sample_project

./: CMakeLists.txt
src/: CMakeLists.txt
src/class1/: CMakeLists.txt
src/class1/inc/: Class1.hpp
src/class1/src/: Class1.cpp
src/class2/: CMakeLists.txt
src/class2/inc/: Class2.hpp
src/class2/src/: Class2.cpp
src/main/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt
src/test/src/: test.cpp
